--- a/Project/login.css
+++ b/Project/login.css
@@ -1,7 +1,7 @@
 body {
           padding: 0;
            margin: 0;
-           background: url(background.jpeg) no-repeat;
+           background-color:darkblue;
            font-family: sans-serif;
            background-size: cover;
    }
@@ -9,7 +9,6 @@ body {
    .login-form {
           width: 350px;
           height 420px;
-          background: rgba(0, 0, 0, 0.5);
           top:50%;
           left:50%;
           transform: translate(-50%, -50%);
